# vero

./: .gitignore  .vero.example.yml  CLAUDE.md  Cargo.toml  EMAIL_UPGRADES_VERO.md  README.md  go.mod  go.sum  install.sh  main.go
examples/: imap_debug.rs
integrations/: SKILL.md
internal/config/: config.go
internal/email/: fetch_body.go  imap.go  smtp.go
internal/models/: types.go
internal/storage/: storage.go
internal/ui/: account_selection.go  attachments.go  compose.go  inbox.go  menu.go  pathcomplete.go  sent.go  styles.go
src/: email_file.rs  main.rs
src/app/: mod.rs
src/cli/: commands.rs  help.rs  mod.rs  output.rs  parser.rs  types.rs
src/cli/commands/: draft.rs  inbox.rs  limit.rs  send.rs  sent.rs
src/cli/output/: responses.rs  text.rs
src/cli/parser/: args.rs  commands.rs  tests.rs
src/config/: mod.rs  types.rs
src/email/: date.rs  imap_client.rs  mod.rs  smtp_client.rs
src/email/imap_client/: body.rs  delete.rs  envelope.rs  fetch.rs  session.rs
src/email_file/: attachments.rs  draft.rs  fields.rs  parsed.rs  stored.rs
src/models/: mod.rs
src/services/: accounts.rs  attachments.rs  drafts.rs  inbox.rs  mod.rs  send.rs  sent.rs
src/storage/: drafts.rs  inbox.rs  mod.rs  paths.rs  seen.rs  sent.rs  signatures.rs
src/tui/: app.rs  error_messages.rs  events.rs  external.rs  mod.rs  runtime.rs  test_support.rs  ui.rs
src/tui/app/: inbox.rs  lifecycle.rs  list_navigation.rs  mod.rs  navigation.rs  search.rs  selection.rs  state.rs
src/tui/handlers/: account_selection.rs  common.rs  compose.rs  drafts.rs  inbox.rs  mod.rs  (+2 more)
(+49 files in other folders)
