[package]
name = "vero"
version = "2.0.0"
edition = "2021"
authors = ["saravenpi"]
description = "A terminal-based email client"
license = "AGPL-3.0"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
shellexpand = "3"

ratatui = "0.29"
crossterm = "0.28"

async-std = "1.13"
async-imap = "0.10"
async-native-tls = "0.5"
lettre = "0.11"
mailparse = "0.15"
futures = "0.3"
encoded-words = "0.2"
